--- a/flex/07-flex-layout-2/index.html
+++ b/flex/07-flex-layout-2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Holy Grail</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/75bdcc1074.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="header">
@@ -15,9 +16,9 @@
 
       <div class="sidebar">
         <ul>
-          <li><a href="#">⭐ - link one</a></li>
-          <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-          <li><a href="#">🖌️ - link three</a></li>
+          <li><a href="#"><i class="fas fa-star"></i> - link one</a></li>
+          <li><a href="#"><i class="fas fa-user-circle"></i> - link two</a></li>
+          <li><a href="#"><i class="fas fa-pen"></i> - link three</a></li>
           <li><a href="#">👌🏽 - link four</a></li>
         </ul>
       </div>
@@ -31,7 +32,7 @@
         <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
       </div>
     </div>
-    
+
     <div class="footer">
       The Odin Project ❤️
     </div>
